# bit_mbzirc

./: .gitignore  .gitmodules  .ycm_extra_conf.py
src/: .rosinstall
src/bit_centernet/: .gitignore  CMakeLists.txt  package.xml
src/bit_centernet/src/: L_detection.py  L_keypoint_detection.py  demo.py  main.py  test.py  train.py
src/bit_control/: CMakeLists.txt  package.xml
src/bit_control/bit_control/: CHANGELOG.rst  package.xml
src/bit_control/bit_control_chassis/: CMakeLists.txt  package.xml
src/bit_control/bit_control_chassis/include/: controlcan.h
src/bit_control/bit_control_chassis/launch/: odom_chassis.launch
src/bit_control/bit_control_chassis/src/: chassis_sub.cpp  chassis_sub_inter_in_motor.cpp  chassis_sub_waitingfordebug.cpp  odom_encoder.cpp  tele_key.py
src/bit_control/bit_control_tool/: CMakeLists.txt  package.xml
src/bit_control/bit_control_tool/launch/: ardu_remoter.launch  io_control.launch
src/bit_control/bit_control_tool/src/: ardu_remoter.cpp  io_control.cpp
src/bit_control/bit_control_tool/srv/: SetHeight.srv
src/bit_control/bit_control_ur5e/: CMakeLists.txt  package.xml
src/bit_control/bit_control_ur5e/src/: ur_force_sub.py  ur_force_sub2.py
src/bit_description/: CMakeLists.txt  package.xml
src/bit_description/bit_description/: CMakeLists.txt  package.xml
src/bit_description/bit_robotcar/: CMakeLists.txt  package.xml
src/bit_description/bit_robotcar/cfg/: view_robot.rviz
src/bit_description/bit_robotcar/launch/: display.launch  gazebo.launch  ur5e_challenge2_upload.launch  ur5e_challenge3_upload.launch  ur5e_penzi_upload.launch  ur5e_upload.launch  view_ur5e.launch  view_ur5e_challenge2.launch  view_ur5e_challenge3.launch  view_ur5e_penzi.launch
src/bit_description/bit_robotcar/meshes/: car_link.dae
src/bit_description/bit_robotcar/meshes/ur5e/visual/: base.dae  endEffector_penzi.dae  forearm.dae  shoulder.dae  upperarm.dae  wrist1.dae  wrist2.dae  wrist3.dae
src/bit_description/bit_robotcar/robots/: ur5.urdf  ur5e.urdf  ur5e_challenge2.urdf  ur5e_challenge3.urdf  ur5e_penzi.urdf
src/bit_description/bit_robotcar/scripts/: pub_car_base_joint_state.py
src/bit_description/bit_robotcar/scripts/hand_show/: grasps.csv  hand_mainwindow.py  hand_moveit.py  quality_cal.m  sub_window.py  test_grasp_dataset.py  test_matlab.py  wrench.m
src/bit_description/bit_robotcar/scripts/hand_show/dataset/: pcamodel.mat
src/bit_description/bit_robotcar/scripts/hand_show/old/: hand_jt_angle.py  hand_jt_angle02.py  hand_mainwindow02.py  hello.py  test.py
src/bit_description/bit_robotcar/scripts/hand_show/ui/: Identity.ui  PC_slider.py  PC_slider.ui  Ui_Identity.py  Ui_robot_arm_decarte.py  Ui_robot_arm_joint.py  cyber_glove_ui.py  cyber_glove_ui.ui  eigen_grasp.py  eigen_grasp.ui  hand_main_window.py  hand_main_window.ui  load_save.py  load_save.ui  quality_cal_ui.py  quality_cal_ui.ui  robot_arm_decarte.py  robot_arm_decarte.ui  robot_arm_joint.ui
src/bit_description/robotcar_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/bit_hardware_interface/: CMakeLists.txt  package.xml
src/bit_hardware_interface/launch/: CameraIR.launch  CameraMER.launch  GPS.launch  IMU.launch  encoder.launch
src/bit_hardware_interface/src/: cameraMERClient.py  dji_odom.py  gen_hdrImage.cpp  gps_kml.kml  hdr_generate.py  interface_cameraMER.cpp  interface_camera_ir.cpp  interface_camerair.cpp  interface_encoder.cpp  interface_gps.cpp  interface_imu.cpp  produce.py  show.kml
src/bit_hardware_interface/srv/: encoder.srv
src/bit_motion/: CMakeLists.txt  package.xml
src/bit_motion/action/: fightfire.action  locate.action  pickput.action
src/bit_motion/bit_motion/: CMakeLists.txt  package.xml
src/bit_motion/bit_motion_fight_fire/: CMakeLists.txt  package.xml
src/bit_motion/bit_motion_find_brick/: CMakeLists.txt  package.xml
src/bit_motion/bit_motion_pick_brick/: CMakeLists.txt  package.xml
src/bit_motion/bit_motion_put_brick/: CMakeLists.txt  package.xml
src/bit_motion/src/: Approach_door.py  Approaching.py  fight_fire_test.py  map_dealer.py  motion_fight_fire.cpp  motion_find_brick.cpp  motion_pick_brick.cpp  motion_put_brick.cpp  motion_test.py  t2_locate_server.py  t2_pick_build_server.py  t2_pick_put.py  t2_pick_put_server.py  t3_fight_fire_server.py  test_vision_LookOneBrickAt1600Points.py
src/bit_msgs/bit_control_msgs/: CMakeLists.txt  package.xml
src/bit_msgs/bit_hardware_msgs/: CMakeLists.txt  package.xml
src/bit_msgs/bit_msgs/: CMakeLists.txt  package.xml
src/bit_msgs/bit_task_msgs/: CMakeLists.txt  package.xml
src/bit_msgs/bit_vision_msgs/: CMakeLists.txt  package.xml
src/bit_plan/: CMakeLists.txt  package.xml
src/bit_plan/action/: building.action
src/bit_plan/include/: GetBrick.h  blueprint_read.h
src/bit_plan/src/: GetBrick.cpp  blueprint_read.cpp  draw_map.cpp  task2.cpp  teach_robot.py  uav_sim.cpp
src/bit_slam/bit_slam/: CMakeLists.txt  package.xml
src/bit_slam/bit_slam_coverage/: CMakeLists.txt  package.xml
src/bit_slam/bit_slam_mapping/: CMakeLists.txt  package.xml
src/bit_slam/bit_slam_navigation/: CMakeLists.txt  package.xml
src/bit_task/: CMakeLists.txt  package.xml
src/bit_task/bit_task/: CMakeLists.txt  package.xml
src/bit_task/bit_task2/: CMakeLists.txt  package.xml
src/bit_task/bit_task3/: CMakeLists.txt  package.xml
src/bit_task/launch/: map_nav.launch  odom_chassis.launch  slam_map.launch  slam_map_display.launch  slam_map_marker.launch  slam_outdoor_map.launch  task2.launch  task3.launch  test.launch  tof_zed.launch  tof_zed_ir.launch  vision_task2.launch  zed_ir.launch  zed_mer.launch
src/bit_task/msg/: BrickInfo.msg  CameraStates.msg  Ground_msg.msg  TaskInfo.msg  UAV_msg.msg  UGV_msg.msg  VisionStates.msg  (+1 more)
src/bit_vision/: CMakeLists.txt  package.xml
src/bit_vision/bit_vision/: CMakeLists.txt  package.xml
src/block_locate/: CMakeLists.txt  package.xml
src/laser_filters/: CMakeLists.txt
src/navigation/: CMakeLists.txt  package.xml
src/robot_pose_ekf/: CMakeLists.txt  robot_pose_ekf_outdoor.launch
src/room_coverage/: CMakeLists.txt  package.xml
(+213 files in other folders)
