<?xml version="1.0"?>
<package format="2">
  <name>bit_control</name>
  <version>1.2.5</version>
  <description>ROS-Industrial support for Universal Robots manipulators (metapackage).</description>
<maintainer email="moyang@todo.todo">moyang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bit_control_chassis</exec_depend>
  <exec_depend>bit_control_tool</exec_depend>
  <exec_depend>bit_control_ur5e</exec_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>
</package>
