<?xml version="1.0"?>
<package format="2">
  <name>bit_control</name>
  <version>1.0.0</version>
  <description>bit robot control metapackage</description>
  <maintainer email="moyang602@163.com">moyang</maintainer>
  <license>BSD</license>
  <author email="ifan@todo.todo">ifan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bit_control_chassis</exec_depend>
  <exec_depend>bit_control_tool</exec_depend>
  <exec_depend>bit_control_ur5e</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
