<?xml version="1.0"?>
<package format="2">
  <name>bit_description</name>
  <version>1.0.0</version>
  <description>bit robot model description metapackage</description>
  <maintainer email="moyang602@163.com">moyang</maintainer>
  <license>BSD</license>
  <author email="ifan@todo.todo">ifan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bit_robotcar</exec_depend>
  <exec_depend>robotcar_moveit_config</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
