<?xml version="1.0"?>
<package format="2">
  <name>bit_motion</name>
  <version>1.0.0</version>
  <description>bit robot motion metapackage</description>
  <maintainer email="moyang602@163.com">moyang</maintainer>
  <license>BSD</license>
  <author email="ifan@todo.todo">ifan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bit_motion_fight_fire</exec_depend>
  <exec_depend>bit_motion_find_brick</exec_depend>
  <exec_depend>bit_motion_pick_brick</exec_depend>
  <exec_depend>bit_motion_put_brick</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
