<?xml version="1.0"?>
<package format="2">
  <name>bit_slam</name>
  <version>1.0.0</version>
  <description>bit robot slam metapackage</description>
  <maintainer email="moyang602@163.com">moyang</maintainer>
  <license>BSD</license>
  <author email="ifan@todo.todo">ifan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bit_slam_coverage</exec_depend>
  <exec_depend>bit_slam_mapping</exec_depend>
  <exec_depend>bit_slam_navigation</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
